<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/speedSetting"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:text="@string/speedChoice"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="20sp">
                <ToggleButton
                    android:id="@+id/togKph"
                    android:textOff="@string/kph"
                    android:textOn="@string/kph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <ToggleButton
                    android:id="@+id/togMph"
                    android:textOff="@string/mph"
                    android:textOn="@string/mph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <ToggleButton
                    android:id="@+id/togKnots"
                    android:textOff="@string/knots"
                    android:textOn="@string/knots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>


        <TextView
            android:text="@string/distanceSetting"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:text="@string/distanceChoice"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp">
            <ToggleButton
                android:id="@+id/togKm"
                android:textOff="@string/km"
                android:textOn="@string/km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ToggleButton
                android:id="@+id/togMiles"
                android:textOff="@string/miles"
                android:textOn="@string/miles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ToggleButton
                android:id="@+id/togNm"
                android:textOff="@string/nm"
                android:textOn="@string/nm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TextView
            android:text="@string/altitudeSetting"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:text="@string/altitudeChoice"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp">
            <ToggleButton
                android:id="@+id/togMeters"
                android:textOff="@string/meters"
                android:textOn="@string/meters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ToggleButton
                android:id="@+id/togFeet"
                android:textOff="@string/feet"
                android:textOn="@string/feet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>


    </LinearLayout>

</TableLayout>
</ScrollView>